--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <style>
         body { margin: 0; }
         canvas { display: block; }
+        #ui {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            z-index: 100;
+        }
     </style>
 </head>
 <body>
