--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kamerabewegung</title>
+    <title>ESA 5 - Kamerabewegung</title>
     <style>
         body { margin: 0; }
         canvas { display: block; }
@@ -12,6 +12,37 @@
             top: 10px;
             left: 10px;
             z-index: 100;
+            background-color: rgba(255, 255, 255, 0.8);
+            padding: 10px 20px;
+            font-size: 18px;
+            border-radius: 5px;
+            font-family: 'Roboto', sans-serif;
+            background-color: beige;
+        }
+        #documentation {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            z-index: 100;
+            background-color: rgba(255, 255, 255, 0.8);
+            padding: 10px 20px;
+            border-radius: 5px;
+            font-family: 'Roboto', sans-serif;
+            background-color: beige;
+        }
+        button {
+            background-color: #566f8c;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            padding: 10px 20px;
+            font-size: 18px;
+            cursor: pointer;
+            margin: 5px;
+            transition: background-color 0.3s ease;
+        }
+        button:hover {
+            background-color: #5691ce;
         }
     </style>
 </head>
@@ -20,6 +51,16 @@
     <button id="increaseRecursion">+</button>
     <button id="decreaseRecursion">-</button>
     <span>Rekursionstiefe: <span id="recursionDepth">0</span></span>
+</div>
+<div id="documentation">
+    <h1>ESA 5 - Kamerabewegung</h1>
+    <h3>Interaktionsmöglichkeiten</h3>
+    <p><b>Pfeiltasten Links/Rechts:</b><br>
+        Rotation auf Kreisbahn um Ursprung</p>
+    <p><b>N / Shift-N:</b><br>
+        Zoom In/Out</p>
+    <p><b>Buttons + und -:</b><br>
+        Rekursionstiefe der Kugel einstellen</p>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 <script src="script.js"></script>
