--- a/index.html
+++ b/index.html
@@ -1,68 +1,41 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ESA 5 - Kamerabewegung</title>
-    <style>
-        body { margin: 0; }
-        canvas { display: block; }
-        #ui {
-            position: absolute;
-            top: 10px;
-            left: 10px;
-            z-index: 100;
-            background-color: rgba(255, 255, 255, 0.8);
-            padding: 10px 20px;
-            font-size: 18px;
-            border-radius: 5px;
-            font-family: 'Roboto', sans-serif;
-            background-color: beige;
+	<script src="ext/gl-matrix.js"></script>
+	<script src="vertexData_cube.js"></script>
+	<script src="vertexData_sphere.js"></script>
+	<script src="vertexData_plane.js"></script>
+	<script src="script.js"></script>
+	<script type="x-shader/x-vertex" id="vertexshader">
+		attribute vec3 aPosition;
+        attribute vec3 aNormal;
+
+        uniform mat4 uPMatrix;
+        uniform mat4 uMVMatrix;
+
+        varying vec4 vColor;
+
+        void main(){
+            gl_Position = uPMatrix * uMVMatrix * vec4(aPosition, 1.0);
+            vColor = vec4(aNormal.x, aNormal.y, aNormal.z, 1.0);
+            vColor = (vColor + 1.0) / 2.0;
         }
-        #documentation {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            z-index: 100;
-            background-color: rgba(255, 255, 255, 0.8);
-            padding: 10px 20px;
-            border-radius: 5px;
-            font-family: 'Roboto', sans-serif;
-            background-color: beige;
+	</script>
+	<script type="x-shader/x-fragment" id="fragmentshader">
+		precision mediump float;
+        varying vec4 vColor;
+
+        void main() {
+            gl_FragColor = vColor;
         }
-        button {
-            background-color: #566f8c;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            padding: 10px 20px;
-            font-size: 18px;
-            cursor: pointer;
-            margin: 5px;
-            transition: background-color 0.3s ease;
-        }
-        button:hover {
-            background-color: #5691ce;
-        }
-    </style>
+	</script>
+	<title>ESA 5</title>
 </head>
-<body>
-<div id="ui">
-    <button id="increaseRecursion">+</button>
-    <button id="decreaseRecursion">-</button>
-    <span>Rekursionstiefe: <span id="recursionDepth">0</span></span>
+<body onload="app.start()">
+<canvas id="canvas" width="500" height="500"></canvas>
+<div>
+	<button onclick="changeRecursionDepth(1)">+</button>
+	<button onclick="changeRecursionDepth(-1)">-</button>
 </div>
-<div id="documentation">
-    <h1>ESA 5 - Kamerabewegung</h1>
-    <h3>Interaktionsmöglichkeiten</h3>
-    <p><b>Pfeiltasten Links/Rechts:</b><br>
-        Rotation auf Kreisbahn um Ursprung</p>
-    <p><b>N / Shift-N:</b><br>
-        Zoom In/Out</p>
-    <p><b>Buttons + und -:</b><br>
-        Rekursionstiefe der Kugel einstellen</p>
-</div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-<script src="script.js"></script>
 </body>
 </html>
