--- a/index.html
+++ b/index.html
@@ -37,8 +37,15 @@
 	<div id="documentation">
 		<h1>ESA 5 - Kamerabewegung</h1>
 		<h3>Dokumentation</h3>
-		<div>TODO</div>
-	</div>
+        <div>C / Shift+C = Rotation</div>
+        <div>P = Projektionstyp Perspective</div>
+        <div>F = Projektionstyp Frustum</div>
+        <div>H / Shift+H = Kamera hoch und runter bewegen</div>
+        <div>D / Shift+D = Kamera-Distanz zum Zentrum</div>
+        <div>V / Shift+V = Öffnungswinkel ändern</div>
+        <div>B / Shift+B = Abmessung der Near-Clipping-Plane ändern</div>
+
+    </div>
 </div>
 <div id="recursion">
 	<div>Rekursionstiefe</div>
